# Sedi

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  TODO.md
src/: CMakeLists.txt  Sedi_main.cpp
